--- a/Ayuda-a-un-peludo-master/perros.html
+++ b/Ayuda-a-un-peludo-master/perros.html
@@ -11,8 +11,8 @@
     <div class="texto-volver"><a href="index.html">Inicio</a></div> 
 
     <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore eum culpa ea voluptate doloribus architecto sequi aut iusto quam corporis magni quo nobis, nulla minus atque esse ipsa qui ut!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi maxime corrupti nostrum debitis rem quos. Ab odio modi maiores, aliquid, qui repellendus provident sit eaque veniam, minus perferendis. Veniam, vero.
+        Lorem ipum dolor, sit amet consectetur adipisicing elit. Dolore eum culpa ea voluptate doloribus architecto sequi aut iusto quam corporis magni quo nobis, nulla minus atque esse ipsa qui ut!
+        Lorem isdsdpsum dolor sit amet consectetur adipisicing elit. Excepturi maxime corrupti nostrum debitis rem quos. Ab odio modi maiores, aliquid, qui repellendus provident sit eaque veniam, minus perferendis. Veniam, vero.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi molestiae architecto, laudantium accusantium sit ipsum enim explicabo aperiam nostrum suscipit cumque distinctio pariatur exercitationem animi molestias voluptas dolores inventore ullam.
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus sapiente nulla facilis! Hic itaque enim voluptatem est beatae aperiam nobis eaque omnis excepturi ut ipsam eius, quaerat aut ad sapiente.
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus libero ad, sit ab sint optio nisi dolores unde quo. Itaque labore iusto minima iste error, dolores incidunt debitis in distinctio.
